[package]
authors = ["Crypto Garage"]
edition = "2018"
name = "sample-other"
version = "0.1.0"

[dependencies]
bitcoin = {version = "0.29.2"}
bitcoin-rpc-provider = {path = "../bitcoin-rpc-provider"}
dlc = {path = "../dlc", features = ["use-serde"]}
dlc-manager = {path = "../dlc-manager", features = ["use-serde", "parallel"]}
dlc-messages = {path = "../dlc-messages"}
hex = "0.4.3"
secp256k1-zkp = {version = "0.7.0", features = ["bitcoin_hashes", "rand", "rand-std"]}
lightning = {version = "0.0.112" }
